fix spacing title

--- a/catalog/view/theme/tt_t902/stylesheet/stylesheet.css
+++ b/catalog/view/theme/tt_t902/stylesheet/stylesheet.css
@@ -1634,8 +1634,8 @@ margin-bottom: 7px;
 .module-title {
 	position: relative;
 	display: block;
-	margin-top: 15px;
-	margin-bottom: 20px;
+	margin-top: 5px;
+	margin-bottom: 10px;
 	text-align: center;
 }
 .module-title .sub-title {
